--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-dbURL = 'mongodb+srv://prajwal:prajwal0403@banking.3hga9.mongodb.net/Money'
+dbURL = 'mongodb+srv://navya882003:navya123@cluster0.z13a99v.mongodb.net/?retryWrites=true&w=majority'
+port = 5000
